tests/samples/negative/pattern_matching/tuple_bool_wildcard_tail_missing_witness.ax
module tuple_bool_wildcard_tail_missing_witness;

fn score(value: (bool, bool)) -> i32 {
    return match value {
        (_, true) => 1,
    };
}

fn main() -> i32 {
    return score((true, true));
}
